# TodoList_manager

./: .env.todolist  Dockerfile  Dockerfile.prod  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: deploy_on_main.yaml  push_any_except_main.yaml
bot/: admin.py  models.py  serializers.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_rename_tg_chat_id_tguser_chat_id.py
bot/tg/: client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml  nginx.conf
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_alter_goalcategory_user_alter_goalcomment_created_and_more.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py  0008_alter_boardparticipant_board.py  0009_alter_boardparticipant_board.py
goals/views/: board.py  category.py  comment.py  goals.py
tests/: conftest.py  factories.py
tests/boards/: board_create_view_test.py  board_list_view_test.py
tests/categories/: cat_create_view_test.py  cat_list_view_test.py
tests/comments/: comment_create_view_test.py  comment_list_view_test.py
tests/goals/: goal_create_view_test.py  goal_list_view_test.py
todolist/: settings.py  urls.py
