[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["macbook <mypur86@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.2.0"
django-filter = "^23.1"
pydantic = "^1.10.7"
requests = "^2.30.0"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[pytest]
DJANGO_SETTINGS_MODULE = todolist.settings
python_files = ['tests.py', 'test_*.py', '*_tests.py']
